deployments/k8s/deploy-clong.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clong
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: clong
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clong
    spec:
      containers:
        - name: clong
          image: cloudlena/clong:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
