deployments/k8s/deploy-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clong-db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: clong-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clong-db
    spec:
      containers:
        - name: db
          image: docker.io/library/postgres:latest
          ports:
            - containerPort: 5432
