deployments/k8s/svc-clong.yml
apiVersion: v1
kind: Service
metadata:
  name: clong
spec:
  selector:
    app.kubernetes.io/name: clong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
