deployments/k8s/svc-db.yml
apiVersion: v1
kind: Service
metadata:
  name: clong-db
spec:
  selector:
    app.kubernetes.io/name: clong-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
