deployments/k8s/svc-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: clongdb
spec:
  selector:
    app.kubernetes.io/name: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
